--- a/css/tablet.less
+++ b/css/tablet.less
@@ -13,6 +13,7 @@
 //     opacity: .6;
 //   }
   
+
 .title{
     margin: 15px auto !important;
     width: 100%;
@@ -42,7 +43,7 @@
     .slideB__Content{
         &__box{
             &-cta{
-                bottom: 28px !important;
+                bottom: 28px;
             }
         }
     }
