--- a/css/desktop.less
+++ b/css/desktop.less
@@ -4,6 +4,43 @@
     display: none;
 }
 .index{
+    .slideA__Content{
+        &__box{
+            img{
+                width: 400px;
+                overflow: hidden;
+            }
+
+        }
+    }
+
+    .slideB__Content{
+        &__box{
+            &-cta{
+                bottom: 0 ;
+            }
+            background-color: rgba(255, 255, 255, 0.8) ;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: auto auto ;
+            grid-template-areas: "somos boton"
+                                "cleaver boton";
+            align-items: center;
+            justify-content: center;
+            p {
+                grid-area: 'somos';   
+                text-align: left;
+            }
+            img{
+                grid-area: 'cleaver';
+            }
+            a{
+                grid-area: 'boton';
+            }
+
+        }
+
+    }
     .slide1__Content{
         &__box{
             display: grid !important;
@@ -12,6 +49,7 @@
             grid-template-areas: 
             "ans exp"
             "btn btn";
+            top: 0;
             margin: 50px;
             // display:flex !important;
             // flex-direction: row !important;
@@ -31,9 +69,6 @@
                 padding-left: 20px;
                 line-height: 6rem;
                 font-weight: @font-light;
-                
-
-
                 strong{
                     font-weight: @font-bold;
                     font-size: 6rem;
@@ -58,7 +93,7 @@
             align-items: center;
             max-width: 60%;
             gap:30px;
-            margin-top: 30px;
+            top: 0;
 
             &-line1{
                 grid-area: line1;
@@ -84,7 +119,7 @@
             }
             a{
                 grid-area: a;
-                margin: 0 200px;
+                margin: 0 auto;
 
             }
         }
@@ -112,15 +147,14 @@
                 font-size: 6rem !important;
 
                 }
-
             }
 
             a{
                 grid-area: a;
-                margin: 0 150px;
-                display: flex;
+                margin: 0 300px;
                 justify-content: center;
                 align-items: center;
+                bottom: unset !important; 
 
             }
 
@@ -153,10 +187,11 @@
 
             a{
                 grid-area: a;
-                margin: 0 150px;
-                display: flex;
+                margin: 0 300px;
                 justify-content: center;
                 align-items: center;
+                bottom: unset !important; 
+
 
             }
 
