--- a/css/menu.css
+++ b/css/menu.css
@@ -1,3 +1,72 @@
+* {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+html {
+  font-size: 62.5%;
+}
+body {
+  font-family: 'Inter', sans-serif;
+}
+.title {
+  text-align: center;
+  color: #000000;
+  font-size: 3rem;
+  font-weight: 600;
+  border-bottom: 5px solid #831d22;
+  margin: 40px 0;
+}
+.title2 {
+  background-color: #000000;
+  color: #ffffff;
+  text-align: center;
+  font-size: 3rem;
+  font-weight: 800;
+  margin: 30px;
+  border-radius: 5px;
+  padding: 10px;
+}
+.section__header {
+  position: relative;
+}
+.section__header-content {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 1fr;
+  grid-template-rows: 1fr;
+  -ms-grid-columns: 1fr;
+  grid-template-columns: 1fr;
+  overflow: hidden;
+}
+.section__header-content > *:nth-child(1) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+}
+.section__header-content p {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  -ms-grid-column-align: start;
+      justify-self: start;
+  position: absolute;
+  color: #ffffff;
+  background-color: rgba(34, 34, 34, 0.6);
+  width: 100vw;
+  font-size: 2.6rem;
+  padding: 30px;
+  text-align: left;
+  font-weight: 300;
+  line-height: 4.9rem;
+}
+.section__header-content p strong {
+  font-size: 4.5rem;
+  font-weight: 600;
+}
+.section__header-content p span {
+  font-weight: 800;
+}
 ul {
   padding-left: 0 !important;
 }
@@ -183,5 +252,13 @@ ul {
     height: 0;
     -webkit-transition: height 0.3s;
     transition: height 0.3s;
+  }
+}
+@media screen and (min-width: 1100px) {
+  header .menu-top {
+    max-width: 1110px;
+  }
+  header .menu__container {
+    max-width: 1110px;
   }
 }
