--- a/pug/index.pug
+++ b/pug/index.pug
@@ -3,56 +3,57 @@ block content
     .index
         section(data-bs-ride="carousel").content__slides.carousel.slide.carousel-fade#carouselExampleFade
             .carousel-inner
+                //- .carousel-item.active
+                //-     picture.carousel-item__img
+                //-         source(media="(min-width:1110px)" srcset="/images/SlidesDesktop/slide1Desktop-1920x537.jpg")
+                //-         source(media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg")
+                //-         img(src="images/slidesMobile/slide2-480x565.jpg").d-block.w-100.img-fluid
+                //-     .slideA__Content 
+                //-         .slideA__Content__box
+                //-             img(src="images/SVG/logoSertec.svg").img-fluid.slideA_logo
+                //-             p DISTRIBUIDOR Y CENTRO DE SERVICIO AUTORIZADO POR
+                //-             img(src="images/Marcas/logo_termiz_.png").img-fluid.slideA_logoTermiz
+                //- .carousel-item
+                //-     picture.carousel-item__img
+                //-         source(media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
+                //-         source(media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg")
+                //-         img(src="images/slidesMobile/slide1-480x565.jpg").d-block.w-100.img-fluid
+                //-     .slideB__Content 
+                //-         .slideB__Content__box
+                //-             p SOMOS #[br]#[strong ESPECIALISTAS EN CALDERAS]
+                //-             img(src="images/Marcas/Cleaver.png").img-fluid.slideB_logoCleaver
+                //-             a(href="contacto.html").slideB__Content__box-cta Contáctenos
+
+                //- .carousel-item
+                //-         picture.carousel-item__img
+                //-             source(media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
+                //-             source(media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg")
+                //-             img(src="images/slidesMobile/slide1-480x565.jpg").d-block.w-100.img-fluid
+                //-         .slide2__Content
+                //-             .slide2__Content__box
+                //-                 p.slide2__Content__box-line1 MANTENIMIENTO PREVENTIVO #[br]Y#[br] CORRECTIVO
+                //-                 p.slide2__Content__box-line2 CONVERSIONES #[br]Y#[br] CARBURACIONES
+                //-                 p.slide2__Content__box-line3 AUTOMATIZACIÓN #[br]DE#[br] CALDERAS
+                //-                 a(href="servicios.html").slide2__Content__box-line4 Servicios
+                //- .carousel-item
+                //-     picture.carousel-item__img
+                //-         source(media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
+                //-         source(media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg")
+                //-         img(src="images/slidesMobile/slide1-480x565.jpg").d-block.w-100.img-fluid
+                //-     .slide3__Content
+                //-         .slide3__Content__box
+                //-             p.slide3__Content__box-line1 SUMINISTRO DE#[br]#[strong REFACCIONES #[br] ORIGINALES] 
+                //-             a(href="productos.html").slide3__Content__box-line2 Productos
+                //- .carousel-item
+                //-     picture.carousel-item__img
+                //-         source(media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
+                //-         source(media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg")
+                //-         img(src="images/slidesMobile/slide1-480x565.jpg").d-block.w-100.img-fluid
+                //-     .slide4__Content
+                //-         .slide4__Content__box
+                //-             p.slide4__Content__box-line1 VENTA DE#[br]#[strong CALDERAS] 
+                //-             a(href="calderas.html").slide4__Content__box-line2 Calderas
                 .carousel-item.active
-                    picture.carousel-item__img
-                        source(media="(min-width:1110px)" srcset="/images/SlidesDesktop/slide1Desktop-1920x537.jpg")
-                        source(media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg")
-                        img(src="images/slidesMobile/slide2-480x565.jpg").d-block.w-100.img-fluid
-                    .slideA__Content 
-                        .slideA__Content__box
-                            img(src="images/SVG/logoSertec.svg").img-fluid.slideA_logo
-                            p DISTRIBUIDOR Y CENTRO DE SERVICIO AUTORIZADO POR
-                            img(src="images/Marcas/logo_termiz_.png").img-fluid.slideA_logoTermiz
-                .carousel-item.active
-                    picture.carousel-item__img
-                        source(media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
-                        source(media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg")
-                        img(src="images/slidesMobile/slide1-480x565.jpg").d-block.w-100.img-fluid
-                    .slideB__Content 
-                        .slideB__Content__box
-                            p SOMOS #[br]#[strong ESPECIALISTAS EN CALDERAS]
-                            img(src="images/Marcas/Cleaver.png").img-fluid.slideB_logoCleaver
-                            a(href="contacto.html").slideB__Content__box-cta Contáctenos
-                .carousel-item
-                        picture.carousel-item__img
-                            source(media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
-                            source(media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg")
-                            img(src="images/slidesMobile/slide1-480x565.jpg").d-block.w-100.img-fluid
-                        .slide2__Content
-                            .slide2__Content__box
-                                p.slide2__Content__box-line1 MANTENIMIENTO PREVENTIVO #[br]Y#[br] CORRECTIVO
-                                p.slide2__Content__box-line2 CONVERSIONES #[br]Y#[br] CARBURACIONES
-                                p.slide2__Content__box-line3 AUTOMATIZACIÓN #[br]DE#[br] CALDERAS
-                                a(href="servicios.html").slide2__Content__box-line4 Servicios
-                .carousel-item
-                    picture.carousel-item__img
-                        source(media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
-                        source(media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg")
-                        img(src="images/slidesMobile/slide1-480x565.jpg").d-block.w-100.img-fluid
-                    .slide3__Content
-                        .slide3__Content__box
-                            p.slide3__Content__box-line1 SUMINISTRO DE#[br]#[strong REFACCIONES #[br] ORIGINALES] 
-                            a(href="productos.html").slide3__Content__box-line2 Productos
-                .carousel-item
-                    picture.carousel-item__img
-                        source(media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
-                        source(media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg")
-                        img(src="images/slidesMobile/slide1-480x565.jpg").d-block.w-100.img-fluid
-                    .slide4__Content
-                        .slide4__Content__box
-                            p.slide4__Content__box-line1 VENTA DE#[br]#[strong CALDERAS] 
-                            a(href="calderas.html").slide4__Content__box-line2 Calderas
-                .carousel-item
                     picture.carousel-item__img
                         source(media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
                         source(media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg")
