--- a/css/desktop.less
+++ b/css/desktop.less
@@ -199,31 +199,36 @@
         }
     }
     &__contactenos{
-        display: grid;
-        grid-template-columns: auto auto;
-        grid-template-areas: 
-        "txt btn";
-        max-width: 1310px;
-        margin: 0 auto;
+        display: flex;
+        max-width: 1110px;
+        height: 73px;
+        margin: 40px auto;
         align-items: center;
-        &__txt{
-            p{
-                grid-area: txt;
-                justify-content: center;
-                font-size: 2.3rem;
-                margin-right: 200px;
-                width: 100%;
-                margin: 0 20px;
-            }
-        }
-        &__btn{
-            grid-area: btn;
-            border-radius: 10px;
+        justify-content: center;
+        p{
+            font-size: 2.3rem;
+            margin-right: 200px;
             width: 100%;
-            margin-right: 100px;
-            height: 45px;
-
+            margin: 0 20px;
         }
+        
+        // &__btn{
+        //     grid-area: btn;
+        //     border-radius: 10px;
+        //     width: 100%;
+        //     margin-right: 100px;
+        //     height: 45px;
+        //     background-color: @color-secondary;
+        //     display: flex;
+        //     justify-content: center;
+        //     align-items: center;
+        //    a{
+        //     text-decoration: none;
+        //     color: @color-white;
+            
+        //    }
+
+        
     }
     &__area{
         max-width: 1110px;
@@ -232,9 +237,21 @@
             &__box{
                 grid-template-columns: 1fr auto 1fr;
                 grid-template-rows: 1fr;
+                &-img{
+                    p{
+                        align-items: flex-end;
+                        justify-content: flex-end;
+                        padding-bottom: 40px;
+                        padding-right: 20px;
+                        line-height: 4.5rem;
+                    }
+                }
             }
         }
     }
+}
+.title{
+    max-width: 600px;
 }
 .title2{
     max-width: 1110px;
