Correcciones realizadas 1,2,3,5,6. Está pendiente la 4 del archivo 2.pdf de la carpeta Cambios solicitados

--- a/components/footer.pug
+++ b/components/footer.pug
@@ -22,8 +22,8 @@ footer
                     p sertec_ags@serteccalderas.com.mx
     .footer__box
         .footer__box__body
-            .footer__box__body-logo
-                img(src="images/SVG/logoSertec.svg", alt="logotipo de SERTEC CALDERAS")
+            //- .footer__box__body-logo
+            //-     img(src="images/SVG/logoSertec.svg", alt="logotipo de SERTEC CALDERAS")
             .footer__box__body-links
                 ul 
                     li
