--- a/pug/contacto.pug
+++ b/pug/contacto.pug
@@ -28,6 +28,6 @@ block content
         .contacto__convencer
             picture
                 source(media="(min-width:1110px)" srcset="/images/PNG/fondoContactenos-left-Desk.png")
-                source(media="(min-width:768px)" srcset="images/PNG/fondoContactenos-left.png")
+                source(media="(min-width:768px)" srcset="images/PNG/fondoContactenos-left.png").img-fluid
                 img(src="images/PNG/fondoContactenos2.png", alt="Ingeniero con casco").img-fluid
             p Contáctenos y déjese convencer por nuestra amplia experiencia.
