--- a/css/tablet.less
+++ b/css/tablet.less
@@ -35,7 +35,11 @@
         &__box{
             img{
                 max-width: 75%;
-                margin: 15px 34px !important;
+                margin: 15px 34px;
+            }
+            .slideA_logo{
+                // border: 1px solid red;
+                margin: 20px 10px 20px 20px !important; 
             }
             
         }
@@ -57,15 +61,14 @@
     }
    
     &__contactenos{
- 
-        &__txt{
-            p{
-                display: flex;
-                align-items: center;
-                height: 100%;
-            }
-
+        p{
+            display: flex;
+            align-items: center;
+            height: 100%;
+            width: 100%;
         }
+
+        
     }
     &__area{
         &__acerca{
@@ -86,7 +89,6 @@
                         justify-content: flex-end;
                         align-items: center;
                         
-
                     }
                     img{
                         height: 100%;
@@ -272,19 +274,19 @@ footer{
             margin: 0 auto;
             display: grid;
             grid-template-columns: repeat(2, auto);
-            grid-template-rows: repeat(3,auto);
+            grid-template-rows: repeat(2,auto);
             grid-template-areas: 
             "enlaces direccion"
-            "horarios facebook"
-            "logo logo";
+            "horarios facebook";
+   
             align-items: baseline;
             justify-content: space-around;
-            &-logo{
-            grid-area: logo;
-            width: 60%;
-            margin: 0 auto;
+            // &-logo{
+            // grid-area: logo;
+            // width: 60%;
+            // margin: 0 auto;
 
-            }
+            // }
             &-links{
                 grid-area: enlaces;
                 h2{
