--- a/css/tablet.less
+++ b/css/tablet.less
@@ -103,7 +103,8 @@
             }
         }
         &__experiencia{
-           
+            display: flex;
+
             &-txt{
                 width: 100%;
                 height: 100%;
@@ -111,26 +112,18 @@
                 align-items: center;
       
                 p{
-                    width: 400px;
-                    margin: 30px;
-                    
+                    width: 352px;
+                    margin: 6px 10px 6px 80px;
+                    // margin: 30px;
                 }
-
-            }
-            picture{
 
             }
             &-img{
-                margin: 10px;
+                margin: 6px 80px 6px 10px;
                 top: 0;
-                max-width: 197px;
-                right: 60px;
-
-                img{
-                    
-
-                }
-
+                right: 0px;
+                width: 197px;
+                align-self: center;
             }
         }
         &__prioridad{
