--- a/css/tablet.less
+++ b/css/tablet.less
@@ -166,7 +166,11 @@
     &__content
     {
         &-historia p{
-            padding: 50px 30px;
+            padding: 0px 30px;
+            br{
+                height: 5px;
+            }
+            
         }
         &__mvv{
             &-box
