--- a/css/form.css
+++ b/css/form.css
@@ -10,7 +10,7 @@ html {
 body {
   font-family: 'Inter', sans-serif;
 }
-/* .title {
+.title {
   text-align: center;
   color: #000000;
   font-size: 3rem;
@@ -27,7 +27,7 @@ body {
   margin: 30px;
   border-radius: 5px;
   padding: 10px;
-} */
+}
 .section__header {
   position: relative;
 }
@@ -115,9 +115,13 @@ body {
   border: none;
   font-weight: 300;
   padding: 0.7em 0;
-  border-radius: 0.4em;
+  border-radius: 10px;
+  height: 40px;
+  width: 140px;
+  margin: 5px auto !important;
   cursor: pointer;
   font-weight: 600;
+  font-size: 1.4rem;
 }
 @media (max-width: 450px) {
   .contacto__form .form {
