--- a/css/form.less
+++ b/css/form.less
@@ -42,9 +42,14 @@
                border: none;
                font-weight: @font-light;
                padding: .7em 0;
-               border-radius: .4em;
+               border-radius: 10px;
+               height: 40px;
+               width: 140px;
+               margin: 5px auto !important;
                cursor: pointer;
                font-weight: @font-semibold;
+               font-size: 1.4rem;
+           
 
            }
         }
