--- a/pug/index.pug
+++ b/pug/index.pug
@@ -93,9 +93,9 @@ block content
                         
                         p SOMOS #[strong EXPERTOS] Y TENEMOS LA #[strong EXPERIENCIA] EN CALDERAS
         .index__area__experiencia
-            picture 
-                source(media="(min-width:768px)" srcset="images/experienciaFondo-tablet.jpg")  
-                img(src="images/experienciaFondo-mobile.jpg").img-fluid
+            //- picture 
+            //-     source(media="(min-width:768px)" srcset="images/experienciaFondo-tablet.jpg")  
+            //-     img(src="images/experienciaFondo-mobile.jpg").img-fluid
             .index__area__experiencia-txt 
                 p La experiencia profesional de 30 años de servicio nos respaldan para ayudarle a seleccionar el #[strong equipo industrial] más adecuado a sus necesidades, así como también para brindarle la solución más idónea a sus problemas de operación en #[strong calderas], lo cual nos permite sin lugar a dudas ofrecer servicios y productos de las más alta calidad a nuestros clientes como una opción seria y confiable.
             .index__area__experiencia-img 
