--- a/css/tablet.less
+++ b/css/tablet.less
@@ -64,6 +64,7 @@
         p{
             display: flex;
             align-items: center;
+            justify-content: flex-start;
             height: 100%;
             width: 100%;
         }
@@ -103,17 +104,22 @@
             }
         }
         &__experiencia{
+            background-image: url(/images/experienciaFondo-tablet.jpg);
+            max-height: 522px;
             display: flex;
-
+            justify-content: space-around;
+            align-items: center;
+            flex-direction: row;
+            padding: 20px;
             &-txt{
-                width: 100%;
-                height: 100%;
+                // width: 100%;
+                // height: 100%;
                 display: flex;
                 align-items: center;
       
                 p{
-                    width: 352px;
-                    margin: 6px 10px 6px 80px;
+                     width: 352px;
+                    // margin: 6px 10px 6px 80px;
                     // margin: 30px;
                 }
 
@@ -167,9 +173,6 @@
     {
         &-historia p{
             padding: 0px 30px;
-            br{
-                height: 5px;
-            }
             
         }
         &__mvv{
