Se corrigen las imagenes de fondo de index

--- a/css/desktop.less
+++ b/css/desktop.less
@@ -248,6 +248,21 @@
                 }
             }
         }
+        &__experiencia{
+            width: 1110px;
+            margin: 80px auto;
+            position: unset;
+        }
+    &__elegirnos{
+        &__items{
+            width: 800px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        
+    }
     }
 }
 .title{
@@ -255,7 +270,7 @@
 }
 .title2{
     max-width: 1110px;
-    margin: 40px auto !important;
+    margin: 80px auto !important;
 }
 .empresa{
     &__content{
