--- a/css/style.less
+++ b/css/style.less
@@ -435,7 +435,6 @@
         display: flex;
         flex-direction: column;
         justify-content: space-around;
-        
         background-image: url(/images/experienciaFondo-mobile.jpg);
         background-position: center right;
         background-size: cover;
@@ -445,7 +444,6 @@
         position: relative;
         margin-bottom: 0;
         background-attachment: fixed;
-        color: white;
         padding: 7%;
     
 
@@ -548,12 +546,21 @@
       &__elegirnos{
         position: relative;
         &__items{
-          position: absolute;
+          
           display: grid;
           height: 100%;
           justify-content: center;
           align-items: center;
-          top: 0;
+          background-image: url(/images/fondo-degradado-mobile.png);
+          background-position: center right;
+          background-size: cover;
+          width: 100vw;
+          margin-left: -50vw;
+          left: 50%;
+          position: relative;
+          margin-bottom: 0;
+          background-attachment: fixed;
+          padding: 7%;
 
           padding: 10px;
           &-item{
