--- a/css/tablet.less
+++ b/css/tablet.less
@@ -125,9 +125,6 @@
 
             }
             &-img{
-                margin: 6px 80px 6px 10px;
-                top: 0;
-                right: 0px;
                 width: 197px;
                 align-self: center;
             }
@@ -155,8 +152,16 @@
         }
         &__elegirnos{
             &__items{
+          background-image: url(/images/fondo-degradado-tablet.png);
+          background-size: cover;
+          overflow: hidden;
+          background-position: 25% 75%;
+          height: 484px;
+          margin: 40px 0;
+          position: unset;
+        
                 &-item{
-                    margin: 5px 20;
+                    margin: 5px 20px;
                     img{
                         width: 15px;
                     }
