--- a/pug/index.pug
+++ b/pug/index.pug
@@ -129,9 +129,9 @@ block content
             include ../marcas.html
         p.title ¿POR QUÉ ELEGIRNOS?
         .index__area__elegirnos
-            picture 
-                source(media="(min-width:768px)" srcset="images/fondo-degradado-tablet.png")
-                img(src="images/fondo-degradado-mobile.png").img-fluid
+            //- picture 
+            //-     source(media="(min-width:768px)" srcset="images/fondo-degradado-tablet.png")
+            //-     img(src="images/fondo-degradado-mobile.png").img-fluid
             .index__area__elegirnos__items
                 .index__area__elegirnos__items-item
                     img(src="images/SVG/circle-chevron-right-solid__white.svg")
