--- a/css/desktop.css
+++ b/css/desktop.css
@@ -356,12 +356,33 @@ body {
   padding-right: 20px;
   line-height: 4.5rem;
 }
+.index__area__experiencia {
+  width: 1110px;
+  margin: 80px auto;
+  position: unset;
+}
+.index__area__elegirnos__items {
+  width: 800px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
 .title {
   max-width: 600px;
 }
 .title2 {
   max-width: 1110px;
-  margin: 40px auto !important;
+  margin: 80px auto !important;
 }
 .empresa__content {
   max-width: 1110px;
