--- a/css/style.css
+++ b/css/style.css
@@ -659,7 +659,6 @@ body {
   position: relative;
   margin-bottom: 0;
   background-attachment: fixed;
-  color: white;
   padding: 7%;
 }
 .index__area__experiencia-txt {
@@ -780,7 +779,6 @@ body {
   position: relative;
 }
 .index__area__elegirnos__items {
-  position: absolute;
   display: -ms-grid;
   display: grid;
   height: 100%;
@@ -790,7 +788,16 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  top: 0;
+  background-image: url(/images/fondo-degradado-mobile.png);
+  background-position: center right;
+  background-size: cover;
+  width: 100vw;
+  margin-left: -50vw;
+  left: 50%;
+  position: relative;
+  margin-bottom: 0;
+  background-attachment: fixed;
+  padding: 7%;
   padding: 10px;
 }
 .index__area__elegirnos__items-item {
