--- a/pug/index.pug
+++ b/pug/index.pug
@@ -105,14 +105,14 @@ block content
             .index__area__prioridad__items
                 .index__area__prioridad__items-item
                         .box-img 
-                            img(src="images/SVG/engrane.svg")
+                            img(src="images/SVG/engrane.svg").img-fluid
                         .box-txt
                             p SERVICIOS
                             a(href="servicios.html") Más información 
 
                 .index__area__prioridad__items-item.index__area__prioridad__items-item-m
                         .box-img
-                            img(src="images/SVG/manometro.svg")
+                            img(src="images/SVG/manometro.svg").img-fluid
 
                         .box-txt
                             p PRODUCTOS
@@ -120,7 +120,7 @@ block content
 
                 .index__area__prioridad__items-item
                         .box-img 
-                            img(src="images/SVG/caldera.svg")
+                            img(src="images/SVG/caldera.svg").img-fluid
                         .box-txt
                             p CALDERAS
                             a(href="calderas.html") Más información
