--- a/pug/marcas.pug
+++ b/pug/marcas.pug
@@ -48,6 +48,20 @@ p.title MARCAS
         button(type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="next").carousel-control-next
             span(aria-hidden="true").carousel-control-next-icon
             span.visually-hidden Next
-            
+
+.carousel.slide.carousel__desktop(data-bs-ride="carousel")
+    .carousel-inner
+        .carousel-item.active
+            img(src="images/carousel/desktop/1.jpg").d-block.w-100
+        .carousel-item
+            img(src="images/carousel/desktop/2.jpg").d-block.w-100
+        .carousel-item 
+            img(src="images/carousel/desktop/3.jpg").d-block.w-100
+        button(type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev").carousel-control-prev
+            span(aria-hidden="true").carousel-control-prev-icon
+            span.visually-hidden Previous
+        button(type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="next").carousel-control-next
+            span(aria-hidden="true").carousel-control-next-icon
+            span.visually-hidden Next
 .marcas__propiedad 
     p *Todas las marcas así como los logotipos mostrados son propiedad de sus respectivos propietarios, #[br] #[strong SERVICIO TÉCNICO A CALDERAS] los utiliza con fines informativos e ilustrativos.
