--- a/css/tablet.less
+++ b/css/tablet.less
@@ -176,10 +176,19 @@
 .empresa{
     &__content
     {
-        &-historia p{
-            padding: 0px 30px;
-            
+        &-historia{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            p{
+                padding: 0px 30px;
+                font-size: 1.7rem;
+                padding: 2rem;
+                top: unset;
+                
+            }
         }
+      
         &__mvv{
             &-box
             {
