--- a/css/tablet.css
+++ b/css/tablet.css
@@ -242,8 +242,22 @@ body {
 .index__area__elegirnos__items-item p {
   font-size: 1.6rem;
 }
+.empresa__content-historia {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
 .empresa__content-historia p {
   padding: 0px 30px;
+  font-size: 1.7rem;
+  padding: 2rem;
+  top: unset;
 }
 .empresa__content__mvv-box {
   height: 477px;
