--- a/pug/empresa.pug
+++ b/pug/empresa.pug
@@ -7,7 +7,7 @@ block content
                     source(media="(min-width:1110px)" srcset="images/JPG/bannerSomos1920x600.jpg")
                     source(media="(min-width:768px)" srcset="images/JPG/bannerSomos834x537.jpg")
                     img(src="images/JPG/bannerSomos428x374.jpg", alt="Ingeniero con casco").img-fluid
-                p ¿QUIÉNES #[br] #[strong SOMOS?]
+                p.banner-title ¿QUIÉNES #[br] #[strong SOMOS?]
         
         p.title NUESTRA HISTORIA
         .empresa__content
