--- a/css/desktop.css
+++ b/css/desktop.css
@@ -364,6 +364,7 @@ body {
   line-height: 4.5rem;
 }
 .index__area__experiencia {
+  background-image: url(/images/experienciaFondo-tablet.jpg);
   width: 1110px;
   margin: 80px auto;
   position: unset;
