--- a/css/desktop.less
+++ b/css/desktop.less
@@ -259,6 +259,7 @@
             }
         }
         &__experiencia{
+            background-image: url(/images/experienciaFondo-tablet.jpg);
             width: 1110px;
             margin: 80px auto;
             position: unset;
