Se corrige el error de la imagen de fondo de experiencia en el index agregando dos puntos en la ruta del background

--- a/css/tablet.less
+++ b/css/tablet.less
@@ -104,7 +104,7 @@
             }
         }
         &__experiencia{
-            background-image: url('/images/experienciaFondo-tablet.jpg');
+            background-image: url('../images/experienciaFondo-tablet.jpg');
             max-height: 522px;
             display: flex;
             justify-content: space-around;
