--- a/css/tablet.less
+++ b/css/tablet.less
@@ -26,6 +26,9 @@
     border-bottom: 2px solid @color-primary;
     display: inline;
 }
+.carousel__desktop{
+    display: none;
+}
 .marcas__propiedad p{
     font-size: @size-md;
   }
@@ -152,7 +155,7 @@
         }
         &__elegirnos{
             &__items{
-          background-image: url(/images/fondo-degradado-tablet.png);
+          background-image: url(../images/fondo-degradado-tablet.png);
           background-size: cover;
           overflow: hidden;
           background-position: 25% 75%;
