--- a/css/menu.less
+++ b/css/menu.less
@@ -25,6 +25,7 @@ ul{
         transition: transform .5s;
         display: flex;
         z-index: 2;
+        margin-bottom: 0;
        
     }
     &__item{
