Se corrige tamaño de carousel de nuestros servicios en la seccion de servicios

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -460,6 +460,14 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
+.servicios__carousel {
+  margin: 30px auto;
+  width: 780px;
+  height: auto;
+}
+.servicios__carousel .carousel-indicators {
+  bottom: 20px;
+}
 .servicios__necesidades {
   max-width: 1110px;
   margin: 20px auto;
