--- a/css/desktop.less
+++ b/css/desktop.less
@@ -363,6 +363,14 @@
             }
         }
     }
+    &__carousel{
+        margin: 30px auto;
+        width: 780px;
+        height: auto;
+        .carousel-indicators{
+            bottom: 20px;
+        }
+    }
     &__necesidades{
         max-width: 1110px;
         margin: 20px auto;
