--- a/css/style.less
+++ b/css/style.less
@@ -94,7 +94,7 @@
           position: absolute;
          align-self: center;
           &__box{
-            height: 75%;
+            height: 360px;
             width: 100%;
             overflow: hidden;
             background-color: rgba(255,255,255,.65);
@@ -102,6 +102,19 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            &-cta{
+              background-color: @color-secondary;
+              color: @color-white;
+              text-decoration: none;
+              font-size: @size-md;
+              margin-top: 20px;
+              padding: 10px 30px;
+              border-radius: 10px;
+              position: absolute;
+              bottom: 5px;
+              width: 180px;
+              text-align: center;
+            }
             .slideA_logo{
               margin: 0px 10px;
             }
